--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a:link,a:visited, a:hover ,a:active{
     padding-top: 15px;
     padding-bottom: 15px;
     background-color: #1a471e;
+    box-sizing: border-box;
     border-style: solid;
     border-color: #1a471e;
     border-radius: 5px 5px 5px 5px;
